hardwood#5 Optional libdeflate support on Java 22+